syntax = "proto3";

package quary.service.v1;

option java_multiple_files = true;

message File {
  // The name of the file. Names are relative to the root of the file system.
  string name = 1;
  bytes contents = 2;
}

message FileSystem {
  map<string, File> files = 1;
}
